2008-04-01  Sancho Lerena <slerena@gmail.com>

	* bin/pandora_prediction: Fixed several problems with
	prediction on anomaly detection. Tested and works fine for me.

	* DB.pm: Fixed problem in combined alerts. Removed some
	log entries.

2008-04-01  Ramon Novoa  <rnovoa@artica.es>

	* util/tentacle_serverd: Changed default port and address (now
	  listens on all local interfaces by default).

2008-04-01  Jorge Gonzalez  <jorge.gonzalez@artica.es>

	* README: Removed duplicated dependency package.

2008-03-27  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm, lib/PandoraFMS/DB.pm: Added
	  compound alert support.

2008-03-25  Ramon Novoa  <rnovoa@artica.es>

	*  util/tentacle_serverd: Added to repository. Tentacle server
	   simple startup script.

2008-03-19  Manuel Arostegui <marostegui@artica.es>

     * pandora_server.spec: Added to repository. New spec
          file for 1.3.X pandora server version.

    * specs/*: Deleted this directory and the files inside,
          they are all deprecated.

2008-03-13  Sancho Lerena <slerena@gmail.com>

    * lib/PandoraFMS/Config.pm: New pandora_startlog function. Added support to manage PID
    in daemon mode. Added support for quiet mode. Added prediction_threads option. 

    * lib/PandoraFMS/Tools.pm: daemonize function now manages PID and store in a file when
    it forks. 

    * lib/PandoraFMS/DB.pm: Removed some gotos.  Modified generic-access DB functions and 
    added one to manage entire row in a hash: get_db_free_row ().

    * bin/pandora_plugin: A lot of fixes. This code actually works fine :-)

    * bin/pandora_prediction: First version of usable code. Works but not seriously tested.

    * bin/pandora_network: Adjusted to work with new features (quiet mode) and new db 
    schema. Some code cleanup.

    * util/pandora_dbstress.pl: Updated default values.

    * util/pandora_dbstress.README: Improved README documentation for dbstress tool.

2008-03-11 Manuel Arostegui <marostegui@artica.es>
