@@ -1,3 +1,12 @@
+2008-04-09  Sancho Lerena <slerena@gmail.com>
+
+	*  pandora_server_installer: Updated some strings and version. 
+	Added new servers.
+	
+	* lib/PandoraFMS/Config.pm: Included support for export server.
+
+	* bin/pandora_export: Export server skeleton.
+
 2008-04-01  Sancho Lerena <slerena@gmail.com>
 
 	* bin/pandora_prediction: Fixed several problems with
